// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`requires field configuration is NOT present is correctly added to the schema 1`] = `
"### This file was generated by Nexus Schema
### Do not make changes to this file directly


\\"\\"\\"

      **Apollo Federation 2.0 Subgraph**
      https://www.apollographql.com/docs/federation/federated-types/federated-directives#requires
      
      Annotates the required input fieldset from a base
      type for a resolver. It is used to develop a query plan
      where the required fields may not be needed by the client,
      but the service may need additional information from other
      services. For example:

      \`\`\`gql
      # extended from the Users service
      extend type User @key(fields: \\"id\\") {
        id: ID! @external
        email: String @external
        reviews: [Review] @requires(fields: \\"email\\")
      }
      \`\`\`

      In this case, the \`Reviews Service\` adds new capabilities
      to the \`User\` type by providing a list of reviews related
      to a user. In order to fetch these reviews, the \`Reviews
      Service\` needs to know the email of the \`User\` from the
      \`Users Service\` in order to look up the reviews. This
      means the reviews field / resolver requires the email field
      from the base \`User\` type.
    
\\"\\"\\"
directive @requires(fields: _FieldSet!) on FIELD_DEFINITION

type Query {
  test: Boolean
}

type User {
  email: String
  id: ID
  name: String
}

\\"\\"\\"

  Represents a set of fields. Grammatically, a field set
  is a selection set minus the braces. This means it can
  represent a single field \\"upc\\", multiple fields \\"id
  countryCode\\", and even nested selection sets \\"id organization
  { id }\\".
  
  [FieldSet - Apollo Federation 2.0 Subgraph Spec](https://www.apollographql.com/docs/federation/subgraph-spec/#scalar-fieldset)
  
\\"\\"\\"
scalar _FieldSet"
`;

exports[`requires field configuration is NOT present is correctly added to typegen 1`] = `
"/**
 * This file was generated by Nexus Schema
 * Do not make changes to this file directly
 */


import type { FederationRequiresField } from \\"@korzun/nexus-federation-plugin/dist/esm/type/requires/field\\"




declare global {
  interface NexusGen extends NexusGenTypes {}
}

export interface NexusGenInputs {
}

export interface NexusGenEnums {
}

export interface NexusGenScalars {
  String: string
  Int: number
  Float: number
  Boolean: boolean
  ID: string
  _FieldSet: any
}

export interface NexusGenObjects {
  Query: {};
  User: { // root type
    email?: string | null; // String
    id?: string | null; // ID
    name?: string | null; // String
  }
}

export interface NexusGenInterfaces {
}

export interface NexusGenUnions {
}

export type NexusGenRootTypes = NexusGenObjects

export type NexusGenAllTypes = NexusGenRootTypes & NexusGenScalars

export interface NexusGenFieldTypes {
  Query: { // field return type
    test: boolean | null; // Boolean
  }
  User: { // field return type
    email: string | null; // String
    id: string | null; // ID
    name: string | null; // String
  }
}

export interface NexusGenFieldTypeNames {
  Query: { // field return type name
    test: 'Boolean'
  }
  User: { // field return type name
    email: 'String'
    id: 'ID'
    name: 'String'
  }
}

export interface NexusGenArgTypes {
}

export interface NexusGenAbstractTypeMembers {
}

export interface NexusGenTypeInterfaces {
}

export type NexusGenObjectNames = keyof NexusGenObjects;

export type NexusGenInputNames = never;

export type NexusGenEnumNames = never;

export type NexusGenInterfaceNames = never;

export type NexusGenScalarNames = keyof NexusGenScalars;

export type NexusGenUnionNames = never;

export type NexusGenDirectives = \\"requires\\"

export interface NexusGenDirectiveArgs {
  requires: {
    fields:NexusGenScalars['_FieldSet']; // _FieldSet!
  }
}

export type NexusGenObjectsUsingAbstractStrategyIsTypeOf = never;

export type NexusGenAbstractsUsingStrategyResolveType = never;

export type NexusGenFeaturesConfig = {
  abstractTypeStrategies: {
    resolveType: true
    __typename: true
    isTypeOf: false
  }
}

export interface NexusGenTypes {
  context: any;
  inputTypes: NexusGenInputs;
  directives: NexusGenDirectives;
  directiveArgs: NexusGenDirectiveArgs;
  rootTypes: NexusGenRootTypes;
  inputTypeShapes: NexusGenInputs & NexusGenEnums & NexusGenScalars;
  argTypes: NexusGenArgTypes;
  fieldTypes: NexusGenFieldTypes;
  fieldTypeNames: NexusGenFieldTypeNames;
  allTypes: NexusGenAllTypes;
  typeInterfaces: NexusGenTypeInterfaces;
  objectNames: NexusGenObjectNames;
  inputNames: NexusGenInputNames;
  enumNames: NexusGenEnumNames;
  interfaceNames: NexusGenInterfaceNames;
  scalarNames: NexusGenScalarNames;
  unionNames: NexusGenUnionNames;
  allInputTypes: NexusGenTypes['inputNames'] | NexusGenTypes['enumNames'] | NexusGenTypes['scalarNames'];
  allOutputTypes: NexusGenTypes['objectNames'] | NexusGenTypes['enumNames'] | NexusGenTypes['unionNames'] | NexusGenTypes['interfaceNames'] | NexusGenTypes['scalarNames'];
  allNamedTypes: NexusGenTypes['allInputTypes'] | NexusGenTypes['allOutputTypes']
  abstractTypes: NexusGenTypes['interfaceNames'] | NexusGenTypes['unionNames'];
  abstractTypeMembers: NexusGenAbstractTypeMembers;
  objectsUsingAbstractStrategyIsTypeOf: NexusGenObjectsUsingAbstractStrategyIsTypeOf;
  abstractsUsingStrategyResolveType: NexusGenAbstractsUsingStrategyResolveType;
  features: NexusGenFeaturesConfig;
}


declare global {
  interface NexusGenPluginTypeConfig<TypeName extends string> {
    
  }
  interface NexusGenPluginInputTypeConfig<TypeName extends string> {
    
  }
  interface NexusGenPluginFieldConfig<TypeName extends string, FieldName extends string> {
    /**
     * Annotates the required input fieldset from a base type
     * for a resolver. It is used to develop a query plan where the
     * required fields may not be needed by the client, but the
     * service may need additional information from other services.
     * For example:
     * \`\`\`ts
     * objectType({
     * name: 'User',
     * keyFields: ['id'],
     * definition: (t) => {
     * t.id('id', { external: true });
     * t.nullable.string('email', { external: true });
     * t.list.field('reviews', { type: 'Review', requires: ['email'] });
     * },
     * });
     * \`\`\`
     * In this case, the Reviews service adds new capabilities to the
     * User type by providing a list of reviews related to a user. In
     * order to fetch these reviews, the Reviews service needs to
     * know the email of the User from the Users service in order to
     * look up the reviews. This means the reviews field / resolver
     * requires the email field from the base User type.
     * [Requires - Apollo Federation 2.0 Subgraph Spec](https://www.apollographql.com/docs/federation/federated-types/federated-directives#requires)
     */
    requires?: FederationRequiresField<TypeName>
  }
  interface NexusGenPluginInputFieldConfig<TypeName extends string, FieldName extends string> {
    
  }
  interface NexusGenPluginSchemaConfig {
  }
  interface NexusGenPluginArgConfig {
    
  }
}"
`;

exports[`requires field configuration is present is correctly added to the schema 1`] = `
"### This file was generated by Nexus Schema
### Do not make changes to this file directly


\\"\\"\\"

      **Apollo Federation 2.0 Subgraph**
      https://www.apollographql.com/docs/federation/federated-types/federated-directives#requires
      
      Annotates the required input fieldset from a base
      type for a resolver. It is used to develop a query plan
      where the required fields may not be needed by the client,
      but the service may need additional information from other
      services. For example:

      \`\`\`gql
      # extended from the Users service
      extend type User @key(fields: \\"id\\") {
        id: ID! @external
        email: String @external
        reviews: [Review] @requires(fields: \\"email\\")
      }
      \`\`\`

      In this case, the \`Reviews Service\` adds new capabilities
      to the \`User\` type by providing a list of reviews related
      to a user. In order to fetch these reviews, the \`Reviews
      Service\` needs to know the email of the \`User\` from the
      \`Users Service\` in order to look up the reviews. This
      means the reviews field / resolver requires the email field
      from the base \`User\` type.
    
\\"\\"\\"
directive @requires(fields: _FieldSet!) on FIELD_DEFINITION

type Query {
  test: Boolean
}

type User {
  email: String
  id: ID
  name: String @requires(fields: \\"id email\\")
}

\\"\\"\\"

  Represents a set of fields. Grammatically, a field set
  is a selection set minus the braces. This means it can
  represent a single field \\"upc\\", multiple fields \\"id
  countryCode\\", and even nested selection sets \\"id organization
  { id }\\".
  
  [FieldSet - Apollo Federation 2.0 Subgraph Spec](https://www.apollographql.com/docs/federation/subgraph-spec/#scalar-fieldset)
  
\\"\\"\\"
scalar _FieldSet"
`;

exports[`requires field configuration is present is correctly added to typegen 1`] = `
"/**
 * This file was generated by Nexus Schema
 * Do not make changes to this file directly
 */


import type { FederationRequiresField } from \\"@korzun/nexus-federation-plugin/dist/esm/type/requires/field\\"




declare global {
  interface NexusGen extends NexusGenTypes {}
}

export interface NexusGenInputs {
}

export interface NexusGenEnums {
}

export interface NexusGenScalars {
  String: string
  Int: number
  Float: number
  Boolean: boolean
  ID: string
  _FieldSet: any
}

export interface NexusGenObjects {
  Query: {};
  User: { // root type
    email?: string | null; // String
    id?: string | null; // ID
    name?: string | null; // String
  }
}

export interface NexusGenInterfaces {
}

export interface NexusGenUnions {
}

export type NexusGenRootTypes = NexusGenObjects

export type NexusGenAllTypes = NexusGenRootTypes & NexusGenScalars

export interface NexusGenFieldTypes {
  Query: { // field return type
    test: boolean | null; // Boolean
  }
  User: { // field return type
    email: string | null; // String
    id: string | null; // ID
    name: string | null; // String
  }
}

export interface NexusGenFieldTypeNames {
  Query: { // field return type name
    test: 'Boolean'
  }
  User: { // field return type name
    email: 'String'
    id: 'ID'
    name: 'String'
  }
}

export interface NexusGenArgTypes {
}

export interface NexusGenAbstractTypeMembers {
}

export interface NexusGenTypeInterfaces {
}

export type NexusGenObjectNames = keyof NexusGenObjects;

export type NexusGenInputNames = never;

export type NexusGenEnumNames = never;

export type NexusGenInterfaceNames = never;

export type NexusGenScalarNames = keyof NexusGenScalars;

export type NexusGenUnionNames = never;

export type NexusGenDirectives = \\"requires\\"

export interface NexusGenDirectiveArgs {
  requires: {
    fields:NexusGenScalars['_FieldSet']; // _FieldSet!
  }
}

export type NexusGenObjectsUsingAbstractStrategyIsTypeOf = never;

export type NexusGenAbstractsUsingStrategyResolveType = never;

export type NexusGenFeaturesConfig = {
  abstractTypeStrategies: {
    resolveType: true
    __typename: true
    isTypeOf: false
  }
}

export interface NexusGenTypes {
  context: any;
  inputTypes: NexusGenInputs;
  directives: NexusGenDirectives;
  directiveArgs: NexusGenDirectiveArgs;
  rootTypes: NexusGenRootTypes;
  inputTypeShapes: NexusGenInputs & NexusGenEnums & NexusGenScalars;
  argTypes: NexusGenArgTypes;
  fieldTypes: NexusGenFieldTypes;
  fieldTypeNames: NexusGenFieldTypeNames;
  allTypes: NexusGenAllTypes;
  typeInterfaces: NexusGenTypeInterfaces;
  objectNames: NexusGenObjectNames;
  inputNames: NexusGenInputNames;
  enumNames: NexusGenEnumNames;
  interfaceNames: NexusGenInterfaceNames;
  scalarNames: NexusGenScalarNames;
  unionNames: NexusGenUnionNames;
  allInputTypes: NexusGenTypes['inputNames'] | NexusGenTypes['enumNames'] | NexusGenTypes['scalarNames'];
  allOutputTypes: NexusGenTypes['objectNames'] | NexusGenTypes['enumNames'] | NexusGenTypes['unionNames'] | NexusGenTypes['interfaceNames'] | NexusGenTypes['scalarNames'];
  allNamedTypes: NexusGenTypes['allInputTypes'] | NexusGenTypes['allOutputTypes']
  abstractTypes: NexusGenTypes['interfaceNames'] | NexusGenTypes['unionNames'];
  abstractTypeMembers: NexusGenAbstractTypeMembers;
  objectsUsingAbstractStrategyIsTypeOf: NexusGenObjectsUsingAbstractStrategyIsTypeOf;
  abstractsUsingStrategyResolveType: NexusGenAbstractsUsingStrategyResolveType;
  features: NexusGenFeaturesConfig;
}


declare global {
  interface NexusGenPluginTypeConfig<TypeName extends string> {
    
  }
  interface NexusGenPluginInputTypeConfig<TypeName extends string> {
    
  }
  interface NexusGenPluginFieldConfig<TypeName extends string, FieldName extends string> {
    /**
     * Annotates the required input fieldset from a base type
     * for a resolver. It is used to develop a query plan where the
     * required fields may not be needed by the client, but the
     * service may need additional information from other services.
     * For example:
     * \`\`\`ts
     * objectType({
     * name: 'User',
     * keyFields: ['id'],
     * definition: (t) => {
     * t.id('id', { external: true });
     * t.nullable.string('email', { external: true });
     * t.list.field('reviews', { type: 'Review', requires: ['email'] });
     * },
     * });
     * \`\`\`
     * In this case, the Reviews service adds new capabilities to the
     * User type by providing a list of reviews related to a user. In
     * order to fetch these reviews, the Reviews service needs to
     * know the email of the User from the Users service in order to
     * look up the reviews. This means the reviews field / resolver
     * requires the email field from the base User type.
     * [Requires - Apollo Federation 2.0 Subgraph Spec](https://www.apollographql.com/docs/federation/federated-types/federated-directives#requires)
     */
    requires?: FederationRequiresField<TypeName>
  }
  interface NexusGenPluginInputFieldConfig<TypeName extends string, FieldName extends string> {
    
  }
  interface NexusGenPluginSchemaConfig {
  }
  interface NexusGenPluginArgConfig {
    
  }
}"
`;

exports[`requires is correctly added to schema 1`] = `
"### This file was generated by Nexus Schema
### Do not make changes to this file directly


\\"\\"\\"

      **Apollo Federation 2.0 Subgraph**
      https://www.apollographql.com/docs/federation/federated-types/federated-directives#requires
      
      Annotates the required input fieldset from a base
      type for a resolver. It is used to develop a query plan
      where the required fields may not be needed by the client,
      but the service may need additional information from other
      services. For example:

      \`\`\`gql
      # extended from the Users service
      extend type User @key(fields: \\"id\\") {
        id: ID! @external
        email: String @external
        reviews: [Review] @requires(fields: \\"email\\")
      }
      \`\`\`

      In this case, the \`Reviews Service\` adds new capabilities
      to the \`User\` type by providing a list of reviews related
      to a user. In order to fetch these reviews, the \`Reviews
      Service\` needs to know the email of the \`User\` from the
      \`Users Service\` in order to look up the reviews. This
      means the reviews field / resolver requires the email field
      from the base \`User\` type.
    
\\"\\"\\"
directive @requires(fields: _FieldSet!) on FIELD_DEFINITION

type Query {
  test: Boolean
}

\\"\\"\\"

  Represents a set of fields. Grammatically, a field set
  is a selection set minus the braces. This means it can
  represent a single field \\"upc\\", multiple fields \\"id
  countryCode\\", and even nested selection sets \\"id organization
  { id }\\".
  
  [FieldSet - Apollo Federation 2.0 Subgraph Spec](https://www.apollographql.com/docs/federation/subgraph-spec/#scalar-fieldset)
  
\\"\\"\\"
scalar _FieldSet"
`;

exports[`requires is correctly added to typegen 1`] = `
"/**
 * This file was generated by Nexus Schema
 * Do not make changes to this file directly
 */


import type { FederationRequiresField } from \\"@korzun/nexus-federation-plugin/dist/esm/type/requires/field\\"




declare global {
  interface NexusGen extends NexusGenTypes {}
}

export interface NexusGenInputs {
}

export interface NexusGenEnums {
}

export interface NexusGenScalars {
  String: string
  Int: number
  Float: number
  Boolean: boolean
  ID: string
  _FieldSet: any
}

export interface NexusGenObjects {
  Query: {};
}

export interface NexusGenInterfaces {
}

export interface NexusGenUnions {
}

export type NexusGenRootTypes = NexusGenObjects

export type NexusGenAllTypes = NexusGenRootTypes & NexusGenScalars

export interface NexusGenFieldTypes {
  Query: { // field return type
    test: boolean | null; // Boolean
  }
}

export interface NexusGenFieldTypeNames {
  Query: { // field return type name
    test: 'Boolean'
  }
}

export interface NexusGenArgTypes {
}

export interface NexusGenAbstractTypeMembers {
}

export interface NexusGenTypeInterfaces {
}

export type NexusGenObjectNames = keyof NexusGenObjects;

export type NexusGenInputNames = never;

export type NexusGenEnumNames = never;

export type NexusGenInterfaceNames = never;

export type NexusGenScalarNames = keyof NexusGenScalars;

export type NexusGenUnionNames = never;

export type NexusGenDirectives = \\"requires\\"

export interface NexusGenDirectiveArgs {
  requires: {
    fields:NexusGenScalars['_FieldSet']; // _FieldSet!
  }
}

export type NexusGenObjectsUsingAbstractStrategyIsTypeOf = never;

export type NexusGenAbstractsUsingStrategyResolveType = never;

export type NexusGenFeaturesConfig = {
  abstractTypeStrategies: {
    resolveType: true
    __typename: true
    isTypeOf: false
  }
}

export interface NexusGenTypes {
  context: any;
  inputTypes: NexusGenInputs;
  directives: NexusGenDirectives;
  directiveArgs: NexusGenDirectiveArgs;
  rootTypes: NexusGenRootTypes;
  inputTypeShapes: NexusGenInputs & NexusGenEnums & NexusGenScalars;
  argTypes: NexusGenArgTypes;
  fieldTypes: NexusGenFieldTypes;
  fieldTypeNames: NexusGenFieldTypeNames;
  allTypes: NexusGenAllTypes;
  typeInterfaces: NexusGenTypeInterfaces;
  objectNames: NexusGenObjectNames;
  inputNames: NexusGenInputNames;
  enumNames: NexusGenEnumNames;
  interfaceNames: NexusGenInterfaceNames;
  scalarNames: NexusGenScalarNames;
  unionNames: NexusGenUnionNames;
  allInputTypes: NexusGenTypes['inputNames'] | NexusGenTypes['enumNames'] | NexusGenTypes['scalarNames'];
  allOutputTypes: NexusGenTypes['objectNames'] | NexusGenTypes['enumNames'] | NexusGenTypes['unionNames'] | NexusGenTypes['interfaceNames'] | NexusGenTypes['scalarNames'];
  allNamedTypes: NexusGenTypes['allInputTypes'] | NexusGenTypes['allOutputTypes']
  abstractTypes: NexusGenTypes['interfaceNames'] | NexusGenTypes['unionNames'];
  abstractTypeMembers: NexusGenAbstractTypeMembers;
  objectsUsingAbstractStrategyIsTypeOf: NexusGenObjectsUsingAbstractStrategyIsTypeOf;
  abstractsUsingStrategyResolveType: NexusGenAbstractsUsingStrategyResolveType;
  features: NexusGenFeaturesConfig;
}


declare global {
  interface NexusGenPluginTypeConfig<TypeName extends string> {
    
  }
  interface NexusGenPluginInputTypeConfig<TypeName extends string> {
    
  }
  interface NexusGenPluginFieldConfig<TypeName extends string, FieldName extends string> {
    /**
     * Annotates the required input fieldset from a base type
     * for a resolver. It is used to develop a query plan where the
     * required fields may not be needed by the client, but the
     * service may need additional information from other services.
     * For example:
     * \`\`\`ts
     * objectType({
     * name: 'User',
     * keyFields: ['id'],
     * definition: (t) => {
     * t.id('id', { external: true });
     * t.nullable.string('email', { external: true });
     * t.list.field('reviews', { type: 'Review', requires: ['email'] });
     * },
     * });
     * \`\`\`
     * In this case, the Reviews service adds new capabilities to the
     * User type by providing a list of reviews related to a user. In
     * order to fetch these reviews, the Reviews service needs to
     * know the email of the User from the Users service in order to
     * look up the reviews. This means the reviews field / resolver
     * requires the email field from the base User type.
     * [Requires - Apollo Federation 2.0 Subgraph Spec](https://www.apollographql.com/docs/federation/federated-types/federated-directives#requires)
     */
    requires?: FederationRequiresField<TypeName>
  }
  interface NexusGenPluginInputFieldConfig<TypeName extends string, FieldName extends string> {
    
  }
  interface NexusGenPluginSchemaConfig {
  }
  interface NexusGenPluginArgConfig {
    
  }
}"
`;
